--- a/app/src/main/res/drawable/round_10_black.xml
+++ b/app/src/main/res/drawable/round_10_black.xml
@@ -1,6 +1,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <solid android:color="@color/colorAccent" />
+    <solid android:color="@color/colorAccentDark" />
 
     <corners
         android:bottomLeftRadius="5dp"
