--- a/app/src/main/res/layout/activity_choose_address.xml
+++ b/app/src/main/res/layout/activity_choose_address.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="ir.elevin.azhand.ChooseAddressActivity">
+    tools:context="ir.elevin.azhand.ChooseAddressAndPayActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
