--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -26,7 +26,7 @@
         <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="200dp"
             android:layout_height="120dp"
-            android:layout_marginTop="-56dp"
+            android:layout_marginTop="-66dp"
             app:srcCompat="@drawable/header_transparent"/>
 
         <TextView
@@ -70,6 +70,7 @@
                 android:maxLines="1"
                 android:drawablePadding="8dp"
                 android:gravity="right"
+                android:inputType="textPassword"
                 android:imeOptions="actionDone"
                 android:singleLine="true"
                 android:textSize="13sp"/>
