--- a/app/src/main/res/layout/cart_row.xml
+++ b/app/src/main/res/layout/cart_row.xml
@@ -15,7 +15,18 @@
         app:layout_constraintStart_toStartOf="parent"
         android:scaleType="centerCrop"
         android:layout_marginStart="16dp"
+        android:transitionName="poster"
         android:layout_marginTop="8dp"/>
+
+    <ProgressBar
+        android:visibility="invisible"
+        android:id="@+id/progressBar"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        app:layout_constraintTop_toTopOf="@+id/productIv"
+        app:layout_constraintBottom_toBottomOf="@+id/productIv"
+        app:layout_constraintEnd_toEndOf="@+id/productIv"
+        app:layout_constraintStart_toStartOf="@+id/productIv"/>
 
     <Button
         android:id="@+id/deleteButton"
