--- a/app/src/main/res/layout/image_slider_layout_item.xml
+++ b/app/src/main/res/layout/image_slider_layout_item.xml
@@ -2,7 +2,7 @@
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scaleType="centerCrop"
+    android:scaleType="centerInside"
     android:id="@+id/iv">
 
 </ImageView>
