--- a/app/src/main/res/layout/product_row.xml
+++ b/app/src/main/res/layout/product_row.xml
@@ -5,71 +5,100 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingRight="8dp"
-    android:paddingLeft="8dp"
     android:clipToPadding="false"
     app:cardElevation="8dp"
     app:cardCornerRadius="10dp"
     android:animateLayoutChanges="true"
-    android:layout_marginTop="14dp">
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp">
+
+    <!--<androidx.appcompat.widget.AppCompatImageView-->
+        <!--android:id="@+id/top_shadow"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="10dp"-->
+        <!--app:srcCompat="@drawable/shadow_top_radius"-->
+        <!--android:scaleType="fitXY"-->
+        <!--android:alpha="0.1"-->
+        <!--android:layout_marginRight="8dp"-->
+        <!--android:layout_marginLeft="8dp"-->
+        <!--app:layout_constraintTop_toTopOf="parent"/>-->
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="250dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginLeft="8dp"
         app:layout_constraintTop_toTopOf="parent"
         android:transitionName="card"
-        app:cardBackgroundColor="#eeeeee"
+        app:cardBackgroundColor="#fff"
+        app:contentPadding="0dp"
         app:cardElevation="4dp"
-        app:cardCornerRadius="2dp">
+        app:cardCornerRadius="10dp">
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/imageIv"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:transitionName="poster"
-            android:background="#eeeeee"
-            android:adjustViewBounds="true"
-            android:scaleType="centerCrop"/>
+            android:background="#fff">
+
+            <com.makeramen.roundedimageview.RoundedImageView
+                android:id="@+id/imageIv"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:adjustViewBounds="true"
+                android:background="#fff"
+                android:scaleType="centerInside"
+                android:transitionName="poster"
+                app:layout_constraintBottom_toTopOf="@+id/detailLayout"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <LinearLayout
+                android:id="@+id/detailLayout"
+                android:layout_width="match_parent"
+                android:layout_height="36dp"
+                android:layout_marginTop="6dp"
+                android:layout_marginRight="12dp"
+                android:layout_marginLeft="12dp"
+                android:paddingBottom="0dp"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageIv">
+
+                <TextView
+                    android:id="@+id/nameTv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    android:textColor="@color/colorBlack"/>
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:layout_weight="1"/>
+
+                <TextView
+                    android:id="@+id/priceTv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/rounded_15_accent"
+                    android:textSize="8sp"
+                    android:textColor="@color/colorWhite"
+                    tools:ignore="SmallSp"
+                    android:paddingRight="8dp"
+                    android:paddingLeft="8dp"
+                    android:paddingTop="4dp"
+                    android:paddingBottom="4dp"/>
+
+                <ProgressBar
+                    android:visibility="gone"
+                    android:id="@+id/progressBar"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp" />
+
+            </LinearLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
-        android:layout_marginRight="12dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginBottom="6dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/cardview">
-
-        <TextView
-            android:id="@+id/nameTv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:textColor="@color/colorBlack"/>
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:layout_weight="1"/>
-
-        <TextView
-            android:id="@+id/priceTv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="10sp"
-            android:textColor="@color/colorSecondaryText"
-            tools:ignore="SmallSp" />
-
-        <ProgressBar
-            android:visibility="gone"
-            android:id="@+id/progressBar"
-            android:layout_width="24dp"
-            android:layout_height="24dp" />
-
-    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
