--- a/app/src/main/res/layout/recycler_fragment.xml
+++ b/app/src/main/res/layout/recycler_fragment.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#eeeeee">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefreshLayout"
@@ -23,7 +24,8 @@
             app:layoutAnimation="@anim/layout_animation_from_bottom_scale"
             app:layoutManagerOrientation="vertical"
             app:layoutManagerReverse="false"
-            app:layoutManagerType="grid" />
+            app:layoutManagerType="grid"
+            android:paddingTop="8dp"/>
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
