--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,12 +4,15 @@
     <color name="colorPrimaryDark">#000</color>
     <color name="colorBackground">#fff</color>
     <color name="colorPrimaryLight">#035385</color>
-    <color name="colorAccent">#F14C6D</color>
+    <color name="colorAccent">#F35172</color>
+    <color name="colorBlackAccent">#443939</color>
     <color name="colorAccentDark">#CF3F5C</color>
     <color name="colorAccentLight">#CC6579</color>
     <color name="colorYellow">#F5DD02</color>
     <color name="colorOrange">#F1652F</color>
     <color name="colorGreen">#579C50</color>
+    <color name="colorEEEEEE">#eeeeee</color>
+    <color name="colorCECDCD">#E6E5E5</color>
     <color name="colorGreenDark">#41753B</color>
     <color name="colorRed">#D81657</color>
     <color name="colorRed1">#BD1950</color>
