--- a/app/src/main/res/layout/order_row.xml
+++ b/app/src/main/res/layout/order_row.xml
@@ -175,7 +175,8 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/ordersRecyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="280dp">
+                android:layout_height="wrap_content"
+                android:paddingBottom="16dp">
 
             </androidx.recyclerview.widget.RecyclerView>
 
@@ -186,6 +187,7 @@
                 android:background="@color/colorDivider"/>
 
             <LinearLayout
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
