--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -78,9 +78,10 @@
             <TextView
                 android:id="@+id/resetPasswordButton"
                 android:layout_width="match_parent"
-                android:layout_height="20dp"
+                android:layout_height="30dp"
                 android:gravity="center"
-                android:textSize="8sp"
+                android:textSize="10sp"
+                android:textColor="@color/colorDividerDark"
                 android:text="بازیابی رمز عبور؟"/>
 
         </LinearLayout>
