--- a/app/src/main/res/layout/dialog_reset_password.xml
+++ b/app/src/main/res/layout/dialog_reset_password.xml
@@ -19,20 +19,15 @@
         android:layout_marginTop="8dp"
         android:textSize="14sp"/>
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/getResetLink"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/getResetLink"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:text="دریافت لینک بازیابی"
-            android:textSize="14sp"
-            android:textColor="@color/colorGreen"/>
-
-    </LinearLayout>
+        android:layout_height="40dp"
+        android:padding="8dp"
+        android:gravity="center"
+        android:background="@drawable/round_ee_15"
+        android:text="دریافت لینک بازیابی"
+        android:textSize="14sp"
+        android:textColor="@color/colorWhite"/>
 
 </LinearLayout>
